syntax = "proto3";

package game_renderer;

import "draw_bundle.proto";

enum UpdateType {
    Full = 0;
    Increment = 1;
}

message SceneElement {
    string id = 1;
    optional DrawBundle draw_bundle = 2;
}

message SceneUpdate {
    UpdateType type = 1;
    repeated SceneElement elements = 2;
}